# MandelHask

./: MandelHask.cabal  MandelHask.lkshs  MandelHask.lkshw
src/: FractalCalc.hs  FractalCalc.hs~  Main.hs
