name: MandelHask
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
license-file: LICENSE
maintainer: christian.witte@gmail.com
homepage: https://github.com/christianwitte/MandelHask
synopsis: Simple Mandelbrot calculation in Haskell
author: Christian Witte

executable MandelHask
    main-is: Main.hs
    build-depends:
        base >=4.8 && <4.9,
        mtl >=2.2.1
    default-language: Haskell2010
    hs-source-dirs: src

